# lfanew

./: .appveyor.yml  .gitattributes  .gitignore  Makefile.in  README.asciidoc  aclocal.m4  autogen.sh  check-c.m4  config.sub  configure  configure.ac  endian.h  lfanew.c  lfanew.spec.rpkg  msdos.baseofcode.patch  msdos.load-self.patch  msdospeify.in  mz.h  patch-lds.awk
a/: direntdup.c  scandir.c
debian/: changelog.in  control  copyright  docs  rules
h/lfanew/: _config.h.in  _version.h.in  dirent.h  io.h
h/nexgen/: mzendian.h  mzhdr.h  pehdr.h
nexgen/: mzendian.h  mzhdr.h  pehdr.h
tests/: atlocal.in  ci-base-setup.sh  ci-build-and-install.sh  ci-check.sh  dirent.h.at  io.h.at  lfanew.at  local.at  metacheck.at  package.m4  testsuite.at
